fixed z-index issue with image element settings + crop panel open > https://www.meistertask.com/app/task/koXKfjKW/z-index-issue-with-image-element-settings-crop-panel-open

--- a/elements/upfront-image/css/uimage.css
+++ b/elements/upfront-image/css/uimage.css
@@ -252,7 +252,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index:10001002;
+	z-index:10001003;
 	cursor: normal;
 }
 
